--- a/style.css
+++ b/style.css
@@ -43,10 +43,11 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
 
   width: 100%;
   min-height: 100svh;
-  padding: 7.5%;
+  padding: 5% 7.5%;
 }
 
 header {
@@ -63,6 +64,7 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 
   height: 100%;
 }
@@ -82,6 +84,7 @@ header {
 
 .header-link {
   color: var(--dark-grayish-blue);
+  font-size: 1.1rem;
 }
 
 main {
@@ -91,6 +94,117 @@ main {
 .topnews {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+
+  width: 100%;
+  height: 50svh;
+}
+
+.bignews {
+  width: 70%;
+  height: 100%;
+
+  padding: 0 10px 0 0;
+}
+
+.bignews-fig {
+  width: 100%;
+  height: 50%;
+  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.bignews-img {
+  min-height: 100%;
+  width: 100%;
+}
+
+.bignews-details {
+  height: 50%;
+  width: 100%;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  padding: 20px 0;
+}
+
+.bignews-title {
+  font-size: 4.5rem;
+  font-weight: 800;
+  width: 45%;
+}
+
+.bignews-description {
+  height: 100%;
+  width: 50%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.bignews-description-text {
+  color: var(--dark-grayish-blue);
+  font-size: 1.15rem;
+}
+
+.bignews-description-button {
+  background-color: var(--soft-red);
+
+  width: 200px;
+  height: 50px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.bignews-description-button-text {
+  color: white;
+  font-size: 0.9;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+}
+
+.newslist {
+  height: 100%;
+  width: 30%;
+
+  padding: 15px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+
+  background-color: var(--very-dark-blue);
+}
+
+.newslist-title {
+  color: var(--soft-orange);
+  font-size: 2.5rem;
+  font-weight: 600;
+}
+
+.newslist-card {
+  height: 20%;
+  width: 100%;
+}
+
+.newslist-card-title {
+  color: white;
+  font-size: 1.3rem;
+}
+
+.newslist-card-description {
+  color: white;
+  font-size: 0.9rem;
+  font-weight: 300;
 }
 
 .bottomnews {
