--- a/style.css
+++ b/style.css
@@ -174,6 +174,7 @@ main {
   color: var(--dark-grayish-blue);
   font-size: 1.25rem;
   line-height: 30px;
+  text-align: justify;
 }
 
 .bignews-description-button {
@@ -516,5 +517,55 @@ main {
     font-size: 1rem;
     line-height: 25px;
     letter-spacing: normal;
+  }
+}
+
+/* Mobile design from here */
+@media screen and (max-width: 400px) {
+  body {
+    padding: 10px;
+  }
+
+  .bignews-title {
+    font-size: 3rem;
+    width: 100%;
+  }
+
+  .bignews-description-text {
+    font-size: 1.1rem;
+    line-height: 20px;
+  }
+
+  .newslist-title {
+    font-size: 2rem;
+  }
+
+  .newslist-card-title {
+    font-size: 1.15rem;
+  }
+
+  .newslist-card-description {
+    font-size: 0.9rem;
+  }
+
+  .bottomnews-card-fig {
+    width: 30%;
+  }
+
+  .bottomnews-card-details {
+    width: 65%;
+  }
+
+  .bottomnews-card-number {
+    font-size: 1.8rem;
+  }
+  
+  .bottomnews-card-title {
+    font-size: 1.15rem;
+  }
+  
+  .bottomnews-card-description {
+    font-size: 0.9rem;
+    line-height: 15px;
   }
 }
