--- a/style.css
+++ b/style.css
@@ -109,14 +109,40 @@ header {
   height: 100%;
 }
 
-.burgermenu-page {
-  width: 60%;
+#burgermenu-page {
+  background-color: white;
+  width: 75%;
   height: 100%;
 
   position: fixed;
-  z-index: 1;
+  z-index: 5;
   top: 0;
-  left: 100%;
+  right: 0;
+
+  display: flex;
+  align-items: center;
+
+  padding: 20px;
+}
+
+.burgermenu-page-list {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.burgermenu-page-list-link {
+  color: var(--very-dark-blue);
+  font-size: 1.3rem;
+}
+
+#burgermenu-closebutton {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+
+  height: 40px;
+  aspect-ratio: 1/1;
 }
 
 main {
