--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ header {
 
 .burgermenu-page-list-link {
   color: var(--very-dark-blue);
-  font-size: 1.3rem;
+  font-size: 1.6rem;
 }
 
 #burgermenu-closebutton {
@@ -466,7 +466,7 @@ main {
 
     padding: 0;
   }
-
+  
   .bignews-details {
     display: flex;
     flex-direction: column;
@@ -611,5 +611,9 @@ main {
   .bottomnews-card-description {
     font-size: 0.9rem;
     line-height: 15px;
+  }
+
+  .burgermenu-page-list-link {
+    font-size: 1.25rem;
   }
 }
