--- a/style.css
+++ b/style.css
@@ -162,6 +162,7 @@ main {
 
   width: 100%;
   height: 50svh;
+  min-height: 350px;
 }
 
 .bignews {
@@ -303,6 +304,7 @@ main {
   align-items: center;
 
   height: 15svh;
+  min-height: 100px;
 }
 
 .bottomnews-card {
@@ -466,7 +468,7 @@ main {
 
     padding: 0;
   }
-  
+
   .bignews-details {
     display: flex;
     flex-direction: column;
